<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_chat">对话</string>
    <string name="app_name">PocketNAI</string>

    <!-- 底部导航 -->
    <string name="nav_generate">生成</string>
    <string name="nav_gallery">画廊</string>
    <string name="nav_settings">设置</string>
...
